FIX mobile header - elmts aligned centered

--- a/content/themes/myCV/app/scss/components/_menu.scss
+++ b/content/themes/myCV/app/scss/components/_menu.scss
@@ -8,6 +8,13 @@
     -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between;
+
+    @media (max-width: $breakpoint-sm) {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+        
   
      @media (min-width: $breakpoint-sm) {
          -webkit-box-pack: end;
