--- a/content/themes/myCV/app/scss/layout/_main-project.scss
+++ b/content/themes/myCV/app/scss/layout/_main-project.scss
@@ -29,7 +29,7 @@
     
     &__title-container {
         position: fixed;
-        top: 53px;
+        top: 64px;
         width: 100%;
         height: 108px;
 
@@ -65,7 +65,7 @@
     &__project-title {
         position: relative;
         background-color: $color-primary;
-        padding: .8rem 3rem;
+        padding: .8rem 2.5rem;
         margin-top: 3.7rem;
         color: $special-color;
         line-height: inherit;
